# PDW

./: .gitignore  CMakeLists.txt  Flex.cpp  Gfx.cpp  Initapp.cpp  License  Misc.cpp  PDW.cpp  PDW.dep  PDW.dsp  PDW.dsw  PDW.mak  PDW.opt  PDW.plg  Pocsag.cpp  Readme  Rsrc.aps  Rsrc.clw  Rsrc.rc  acars.cpp  decode.cpp  ermes.cpp  helper_funcs.cpp  iob_shim.cpp  language.cpp  menu.cpp  mobitex.cpp  pdw_vs2017.sln  pdw_vs2017.vcxproj  pdw_vs2017.vcxproj.filters  printer.cpp  resrc1.h  sigind.cpp  sound_in.cpp  toolbar.cpp  vcpkg.json
.github/workflows/: build.yml
GFX/: CMakeLists.txt
Headers/: CMakeLists.txt  Resource.h  SLICER.H  acars.h  decode.h  ermes.h  gfx.h  helper_funcs.h  html.h  initapp.h  language.h  menu.h  misc.h  mobitex.h  pdw.h  printer.h  sigind.h  sound_in.h  toolbar.h
openssl-0.9.8l/lib/: 4758cca.lib  gmp.lib  libeay32.lib
openssl-0.9.8l/lib/MinGW/: ssleay32.def
openssl-0.9.8l/lib/VC/: libeay32MDd.lib  libeay32MT.lib  ssleay32MDd.lib  ssleay32MT.lib
openssl-0.9.8l/out32/: libeay32.lib  ssleay32.lib
openssl-1.0.2/include/openssl/: opensslconf.h
openssl-1.0.2/lib/: aep.lib  atalla.lib  capi.lib  chil.lib  cswift.lib  gost.lib  nuron.lib  padlock.lib  sureware.lib  ubsec.lib
openssl-1.0.2/lib/MinGW/: libeay32.def
openssl-1.0.2/lib/VC/: libeay32MTd.lib  ssleay32MD.lib  ssleay32MTd.lib
openssl-1.0.2/shared/lib/: libeay32.lib  ssleay32.lib
openssl-1.0.2/static/lib/: ssleay32.lib
openssl-3.5.5/include/openssl/: asn1.h  asn1t.h  bio.h  cmp.h  cms.h  conf.h  configuration.h  core_names.h  crmf.h  crypto.h  ct.h  ess.h  ocsp.h  opensslv.h  pkcs12.h  pkcs7.h  safestack.h  srp.h  ssl.h  ui.h  x509.h  x509_acert.h  x509_vfy.h  x509v3.h
openssl-3.5.5/lib/: libcrypto.def  libcrypto.lib  libssl.def  libssl.lib
utils/: CMakeLists.txt  Debug.cpp  OSTYPE.C  OSTYPE.H  Ostype.cpp  binary.cpp  binary.h  debug.h  globals.h  http_post.cpp  http_post.h  ipcnfg.cpp  ipcnfg.h  rs232.cpp  rs232.h  smtp.cpp  smtp.h  smtp_int.h
